Fix dark mode build and nav layout

--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -3,10 +3,15 @@ header {
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-bottom: 1em;
+}
+
+nav {
+  position: static;
 }
 
 nav ul {
-  margin-top: 0.5em; /* space below the title */
+  margin-top: 1em; /* space below the title */
 }
 
 nav li {
